infra/k8s/events.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: events-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: events
  template:
    metadata:
      labels:
        app: events
    spec:
        containers:
          - name: events
            image: richdgo4/event-bus:latest
