infra/k8s/events-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: events-service
spec:
  type: ClusterIP
  selector:
    app: events
  ports:
    - name: event-bus
      protocol: TCP
      port: 4005
      targetPort: 4005
