infra/k8s/ingresses.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-posts
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: localhost
    http:
      paths:
      - path: /posts/create
        pathType: Prefix
        backend:
          service:
            name: posts-service
            port:
              number: 4000
      - path: /posts/[^/]+/comments
        pathType: ImplementationSpecific
        backend:
          service:
            name: comments-service
            port:
              number: 4001
      - path: /posts
        pathType: Exact
        backend:
          service:
            name: query-service
            port:
              number: 4002
      - path: /
        pathType: Prefix
        backend:
          service:
            name: client-service
            port:
              number: 3000
